# new_rstp-streamer

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
docs/: 2026-06-12-new-viewer-design.md  2026-06-12-security-architecture-kcmvp.md  2026-06-13-m1-m3-test-plan.md  2026-06-13-m3-ui-parity-plan.md  2026-06-14-soak-8h-report.md  2026-06-15-windows-build-and-test.md  2026-06-15-windows-verification-plan.md  m1-m3-acceptance.md  m1-m4-integration-report.md  m2a-acceptance.md  m2b-acceptance.md  m3-acceptance.md  m4-acceptance.md  m4-stress-1h-report.md  tech-debt.md
docs/issues/: 2026-06-12-ghost-session-research.md  2026-06-12-ghost-session-stall.md
docs/superpowers/plans/: 2026-06-12-m1-core-domain.md  2026-06-12-m1-pipeline.md  2026-06-12-m2a-multichannel.md  2026-06-12-m2b-performance.md  2026-06-12-m2c-zerocopy.md  2026-06-13-m3-recording.md  2026-06-13-m4-relay.md
ops/: device-battery.sh  diskfull-test.sh  m1m4-stress-1h.sh  m4-relay-verify.sh  m4-shield-verify.sh  m4-stress-1h.sh  measure-baseline.sh  reconnect-synthetic.sh  reconnect-test.sh  run-stress-2h.sh  scale-test.sh  session-capacity.sh  sim-20ch.sh  soak-8h.sh  stress-inject.sh  stress-m1.md  synthetic-source.sh
ops/mediamtx/: download.sh
ops/win/: build.ps1  m1m4-stress.ps1  synthetic-source.ps1
src/: CMakeLists.txt
src/app/: ChannelController.cpp  ChannelController.h  ChannelManager.cpp  ChannelManager.h  ChannelSnapshot.h  MarshallingStreamSource.h  RecordingController.cpp  RecordingController.h  RelaySupervisor.cpp  RelaySupervisor.h  SnapshotService.cpp  SnapshotService.h
src/app/ports/: IChannelRepository.h  IChannelRuntimeFactory.h  IClock.h  IExecutor.h  IFrameSurface.h  IFrameSurfaceRegistry.h  ILogger.h  IRecordingSink.h  IRelayControlApi.h  IRelayServiceManager.h  ISnapshotSink.h  IStreamSource.h  IVideoRenderer.h
src/domain/channel/: ChannelConfig.h
src/domain/connection/: ConnectionStateMachine.cpp  ConnectionStateMachine.h  Policies.h
src/domain/health/: DiagnosisReason.h  StreamHealth.h
src/domain/layout/: GridRules.h
src/domain/recording/: FileName.h  RecordingState.h
src/domain/relay/: RelayConfig.cpp  RelayConfig.h
src/infra/ffmpeg/: ChannelSourceFactory.cpp  ChannelSourceFactory.h  FfmpegRecorder.cpp  FfmpegRecorder.h  FfmpegStreamSource.cpp  FfmpegStreamSource.h  HwContext.cpp  HwContext.h
src/infra/persist/: JsonChannelRepository.cpp  JsonChannelRepository.h  PngSnapshotWriter.cpp  PngSnapshotWriter.h  RecordingPaths.h
src/infra/relay/: HttpRelayControlApi.cpp  HttpRelayControlApi.h  LaunchdRelayService.cpp  LaunchdRelayService.h  MediaMtxConfigWriter.cpp  MediaMtxConfigWriter.h  RelayServiceManagerFactory.cpp  RelayServiceManagerFactory.h  WindowsRelayService.cpp  WindowsRelayService.h
src/infra/system/: CompositeLogger.h  ControlExecutor.cpp  ControlExecutor.h  ProcessStats.h  ResourceMonitor.cpp  ResourceMonitor.h  SoakLogger.cpp  SoakLogger.h  StderrLogger.h  SteadyClock.h
src/infra/video/: D3d11VideoBridge.cpp  D3d11VideoBridge.h  LatestFrameSlot.h  LatestSurfaceSlot.h  SharedGpuDevice.h  VtMetalBridge.h  VtMetalBridge.mm  VtMetalBridge_stub.cpp
src/ui/: main.cpp
src/ui/channels/: ChannelDialog.cpp  ChannelDialog.h  ChannelInfoDialog.cpp  ChannelInfoDialog.h  ChannelListPanel.cpp  ChannelListPanel.h
src/ui/common/: Confirm.h  Style.h
src/ui/grid/: GridView.cpp  GridView.h  VideoTileWidget.cpp  VideoTileWidget.h
src/ui/panels/: FilePanel.cpp  FilePanel.h
src/ui/relay/: RelayCoordinator.cpp  RelayCoordinator.h
src/ui/render/: RendererSelect.h  RhiVideoRenderer.cpp  RhiVideoRenderer.h  SwVideoRenderer.cpp  SwVideoRenderer.h  nv12.frag  texture.frag  texture.vert
src/ui/shell/: ControlBridge.h  LogPanel.cpp  LogPanel.h  MainWindow.cpp  MainWindow.h  RepaintClock.h  Toast.cpp  Toast.h
tests/: CMakeLists.txt
tests/fixtures/: make-fixtures.sh
tests/helpers/: FakeChannelRepository.h  FakeClock.h  FakeLogger.h  FakeRecordingSink.h  FakeRelayControlApi.h  FakeRelayServiceManager.h  FakeRuntimeFactory.h  FakeSnapshotSink.h  FakeStreamSource.h  QtTestApp.h
tests/integration/: FfmpegRecorderIT.cpp  FfmpegSourceIT.cpp  LaunchdRelayServiceIT.cpp  RelayControlApiIT.cpp  harness.h
tests/unit/: ChannelControllerTest.cpp  ChannelManagerTest.cpp  ConnectionStateMachineTest.cpp  ControlBridgeTest.cpp  ControlExecutorTest.cpp  FfmpegCloseTest.cpp  FfmpegRecorderTest.cpp  GridRulesTest.cpp  JsonChannelRepositoryTest.cpp  LatestFrameSlotTest.cpp  LatestSurfaceSlotTest.cpp  MarshallingTest.cpp  MediaMtxConfigWriterTest.cpp  RecordingControllerTest.cpp  RecordingStateTest.cpp  RelayConfigTest.cpp  RelayPortsTest.cpp  RelaySupervisorTest.cpp  RendererSelectTest.cpp  SmokeTest.cpp  SnapshotObserverTest.cpp  SnapshotServiceTest.cpp  SnapshotWriterTest.cpp  StreamHealthTest.cpp  ToastTest.cpp  VideoTileWidgetTest.cpp
